# Neural-Amp

./: .gitignore  README.md  main.py  proccessing.py  train.ipynb
juce_plugin/: CMakeLists.txt
juce_plugin/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
python_training/: main.py  proccessing.py  train_model.py
